添加poi库依赖

--- a/lujconfig-maven-plugin/pom.xml
+++ b/lujconfig-maven-plugin/pom.xml
@@ -53,6 +53,13 @@
       <artifactId>ant</artifactId>
       <version>1.9.13</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.17</version>
+    </dependency>
   </dependencies>
 
   <!-- https://github.com/groovy/groovy-eclipse/wiki/Groovy-Eclipse-Maven-plugin -->
