--- a/lujconfig-maven-plugin/pom.xml
+++ b/lujconfig-maven-plugin/pom.xml
@@ -10,6 +10,17 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
+  <properties>
+    <luj.encoding>UTF-8</luj.encoding>
+    <luj.compiler>1.8</luj.compiler>
+
+    <project.build.sourceEncoding>${luj.encoding}</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>${luj.encoding}</project.reporting.outputEncoding>
+
+    <maven.compiler.source>${luj.compiler}</maven.compiler.source>
+    <maven.compiler.target>${luj.compiler}</maven.compiler.target>
+  </properties>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
     <dependency>
@@ -59,6 +70,14 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
       <version>3.17</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.spockframework/spock-core -->
+    <dependency>
+      <groupId>org.spockframework</groupId>
+      <artifactId>spock-core</artifactId>
+      <version>1.1-groovy-2.4</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
