--- a/lujconfig-maven-plugin/pom.xml
+++ b/lujconfig-maven-plugin/pom.xml
@@ -38,6 +38,13 @@
       <version>21.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.8.11.2</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
     <dependency>
       <groupId>org.apache.maven</groupId>
