--- a/lujconfig-compiler/pom.xml
+++ b/lujconfig-compiler/pom.xml
@@ -2,17 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>luj.parent</groupId>
     <artifactId>lujparent</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
 
+  <modelVersion>4.0.0</modelVersion>
   <groupId>luj.config</groupId>
-  <artifactId>example</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>lujconfig-compiler</artifactId>
+  <version>0.1-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
@@ -22,27 +21,16 @@
     </dependency>
 
     <dependency>
-      <groupId>luj.config</groupId>
-      <artifactId>lujconfig-compiler</artifactId>
+      <groupId>luj.generate</groupId>
+      <artifactId>lujgenerate</artifactId>
       <version>0.1-SNAPSHOT</version>
-      <scope>provided</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>1.1.11</version>
+      <groupId>luj.test</groupId>
+      <artifactId>lujtest</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>luj.config</groupId>
-        <artifactId>lujconfig-maven-plugin</artifactId>
-        <version>1.0-SNAPSHOT</version>
-      </plugin>
-    </plugins>
-  </build>
 </project>
