优化工程设置

--- a/lujconfig-maven-plugin/pom.xml
+++ b/lujconfig-maven-plugin/pom.xml
@@ -154,7 +154,7 @@
 
     <testResources>
       <testResource>
-        <directory>${build.testSourceDirectory}/../groovy</directory>
+        <directory>${project.build.testSourceDirectory}/../groovy</directory>
         <excludes>
           <exclude>**/*.groovy</exclude>
         </excludes>
