--- a/lujconfig/pom.xml
+++ b/lujconfig/pom.xml
@@ -20,6 +20,12 @@
       <version>0.1-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>luj.bean</groupId>
+      <artifactId>lujbean</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
